@@ -10,6 +10,7 @@
 			<ThemeField>AREA</ThemeField>
 			<Styles>
 				<Style>
+					<Id>0-30000</Id>
 					<LineWidth>1</LineWidth>
 					<LineStyle>None</LineStyle>
 					<LineColor>255,165,165,165</LineColor>
@@ -18,6 +19,7 @@
 					<MaxRangeThemeValue>30000</MaxRangeThemeValue>
 				</Style>
 				<Style>
+					<Id>30001-50000</Id>
 					<LineWidth>1</LineWidth>
 					<LineStyle>None</LineStyle>
 					<LineColor>255,165,165,165</LineColor>
@@ -26,6 +28,7 @@
 					<MaxRangeThemeValue>50000</MaxRangeThemeValue>
 				</Style>				
 				<Style>
+					<Id>500001+</Id>
 					<LineWidth>1</LineWidth>
 					<LineStyle>None</LineStyle>
 					<LineColor>255,165,165,165</LineColor>
@@ -43,6 +46,7 @@
 		<Layer><!--Test a non-themed layer-->
 			<Styles>
 				<Style>
+				    <Id>RoadsStyle</Id>
 					<LineWidth>1</LineWidth>
 					<LineColor>255,105,105,105</LineColor>
 					<LineStyle>Solid</LineStyle>					
@@ -59,6 +63,7 @@
 			<ThemeField>SYSTEM</ThemeField>		
 			<Styles>
 				<Style>
+					<Id>RioGrandeDeSantiago</Id>
 					<UniqueThemeValue>Rio Grande de Santiago</UniqueThemeValue>
 					<LineWidth>3</LineWidth>
 					<LineColor>255,105,105,225</LineColor>
@@ -78,6 +83,7 @@
 			<Id>cities</Id>
 			<Styles>
 				<Style>
+					<Id>SmallTowns</Id>
 					<FillColor>255,100,255,100</FillColor>
 					<LineColor>255,0,155,0</LineColor>
 					<LineSize>1</LineSize>
@@ -88,6 +94,7 @@
 					<PointSymbolShape>Square</PointSymbolShape>
 				</Style>
 				<Style>
+					<Id>MidSizedCities</Id>
 					<FillColor>255,100,100,255</FillColor>
 					<LineColor>255,0,0,155</LineColor>
 					<LineSize>1</LineSize>					
@@ -98,6 +105,7 @@
 					<PointSymbolShape>Circle</PointSymbolShape>
 				</Style>
 				<Style>
+					<Id>LargeCities</Id>
 					<MinRangeThemeValue>2000001</MinRangeThemeValue>
 					<MaxRangeThemeValue>100000000</MaxRangeThemeValue>				
 					<PointSymbol>Image</PointSymbol>
